--- a/TrickyBot.html
+++ b/TrickyBot.html
@@ -9,22 +9,19 @@
   <body>
     <div class="container" id="navigation_bar">
       <div class="row1">
-        <h2>One</h2>
-        <h2>Two</h2>
-        <h2>Three</h2>
-        <h2>Four</h2>
+        <h2>Home</h2>
+        <h2>About</h2>
+        <h2>Features</h2>
+        <h2>Add to Stack</h2>
       </div>
     </div>
 
     <div class="container" id="home">
       <div class="row1">
         <div id="left">
-          <h1>name</h1>
-          <h2>
-            catchphrasefjke;ijofqei fqoipjprijfpqeriofj
-            fjrijfeoqijfqpeoirfjqperiof qpeorijf
-          </h2>
-          <h1>button</h1>
+          <h1><b>Ticky</b>Bot</h1>
+          <h2>Let your team manage their support tickets 100% inside Slack</h2>
+          <h1>Add to Slack</h1>
         </div>
 
         <div id="right">
@@ -35,45 +32,76 @@
 
     <div class="container" id="about">
       <div class="row1">
-        <h1>what</h1>
+        <h1>What Is <b>Ticky</b>Bot</h1>
       </div>
 
       <div class="row2">
-        <p>paragraph1</p>
-        <p>paragraph2</p>
+        <p>
+          <b>Ticky</b>Bot is a Slack Bot 🤖 that lets you use support tickets on
+          Slack. This way, you don't need to leave your beloved channel to
+          assist your users, if you don't feel like it.
+        </p>
+        <p>
+          With <b>Ticky</b>Bot you can easily check if you've received new
+          tickets, change their status, or write a reply, and the ticket will
+          instantly update itself on our site.
+        </p>
       </div>
 
       <div class="row3">
-        <p>support</p>
+        <p>
+          Support request shouldn't be handled through Slack's direct
+          messages.<br />
+          <i
+            >Image about someone asking silly questions and the workplace admin
+            asking him/her to open a support ticket so other admins could look
+            into the issue.</i
+          >
+        </p>
       </div>
     </div>
 
     <div class="container" id="how">
       <div class="row1">
-        <h1>how it works</h1>
+        <h1>How It Works</h1>
       </div>
 
       <div class="row2">
-        <h1 id="pic1">picture1</h1>
-        <h1 id="pic2">picture2</h1>
-        <h1 id="pic3">picture3</h1>
+        <div class="card" id="pic1">
+          <h1>
+            heyljkljk lkjhlkjhlkjh kljhkhjll kjhkhjl lkjhlk jhlkj hlkj qer
+            reqwqreqwe qerqwreqwerrqweqrew qreqrewqrwerqew
+          </h1>
+        </div>
+        <div class="card" id="pic2">
+          <h1>hey</h1>
+        </div>
+        <div class="card" id="pic3">
+          <h1>hey</h1>
+        </div>
       </div>
     </div>
 
     <div class="container" id="start">
       <div class="column1">
-        <h1>start using</h1>
-        <p>description</p>
-        <h1>button</h1>
-        <p>description</p>
+        <h1>Start Using <b>Ticky</b>Bot Today</h1>
+        <p>
+          TickyBot allows Slack teams to manage their support tickets 100%
+          inside Slack, without having to switch between different apps.
+        </p>
+        <h1>Add to Stack</h1>
+        <p>... so you don't need to go back and forth with another app.</p>
       </div>
     </div>
 
     <div class="container" id="copyright">
       <div class="column1">
-        <p>made</p>
-        <p>source code</p>
-        <p>not made by</p>
+        <p>Made with ❤️ by maknetaRo</p>
+        <p>Source code is available on my GitHub page</p>
+        <p>
+          The app is not created by, affiliated with, or supported by Slack
+          Technologies, Inc
+        </p>
       </div>
     </div>
   </body>
