--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
 
       <div class="row2">
         <div class="card" id="pic1">
+          <img src="pic1.png" class="picture" />
           <p>
             You can add TickyBot to your Slack workplace by scrolling down or
             <a href="#copyright">clicking here</a>
           </p>
         </div>
         <div class="card" id="pic2">
+          <img src="pic2.png" class="picture" />
           <p>
             Your users can open a ticket by typing
             <span style="color: red">/ticket</span> and their message into the
@@ -92,6 +94,7 @@
           </p>
         </div>
         <div class="card" id="pic3">
+          <img src="pic3.png" class="picture" />
           <p>
             Once you or another admin solved their problems you can type
             <span style="color: red">/ticket close #id</span> to close the
